@@ -70,6 +70,7 @@ sources = """
           move_to_dialog.cc
           new_film_dialog.cc
           playhead_to_timecode_dialog.cc
+          playhead_to_frame_dialog.cc
           repeat_dialog.cc
           report_problem_dialog.cc
           rgba_colour_picker.cc
